<resources>
    <string name="app_name">Anton\'s FYP</string>
    <string name="search_bar">Search</string>
    <string name="placeholder_title">BSL 4 Kids</string>
    <string name="search_button">Search</string>
    <string name="options_button">Options</string>
    <string name="profile_button">Profile</string>
    <string name="add_word_button">Add Word/Phrase</string>
    <string name="enter_word_button">Enter Word/Phrase</string>
    <string name="enter_definition_button">Enter Definition</string>
    <string name="select_gallery_button">Select Video From Gallery</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="word_preview_title">Word/Phrase</string>
    <string name="definition_title">Definition</string>
    <string name="add_video_title">Select Video</string>
    <string name="logo">BSL4Kids logo</string>
    <string name="edit_button">EDIT</string>
    <string name="add_video_button">Add Video</string>
    <string name="upload_date">Upload Date</string>
    <string name="login_title">Login</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="register_title">Register</string>
    <string name="username_title">Username</string>
    <string name="login_button_false">Login/Register</string>
    <string name="tag_title">Tags:</string>
    <string name="tag_button">Tag</string>
    <string name="placeholder_def">Definition</string>
    <string name="add_tag">Add a Tag</string>
    <string name="search_by_word">Search by Word/Phrase</string>
    <string name="search_by_tag">Search by Tag</string>
    <string name="view_tags">View Tags</string>
    <string name="add_tag_button">Add Tag</string>
    <string name="report_button">Report</string>
    <string name="like_button">Like</string>
    <string name="like_num">NumLikes</string>
    <string name="add_tag_title">Add Tag</string>
    <string name="word_default_title">Word Title</string>
    <string name="num_likes_default">num likes</string>
    <string name="consent_text">By registering an account, I hereby confirm that I am over the age of 18 and consent to the free distribution of any and all videos I upload to BSL4Kids.</string>
    <string name="thumb_text">Image</string>
    <string name="set_image">Set Image</string>
    <string name="select_image_title">Select Image</string>
    <string name="select_gallery_img_button">Select Image From Gallery</string>
    <string name="text_search_button">Text Search</string>
    <string name="categories_button">Categories</string>
    <string name="media_disclaimer">Please ensure that the filename of the media you wish to upload contains no spaces</string>
    <string name="video_disclaimer">Please ensure that the video you will upload contains no spaces in its file name, and is in the MP4 format</string>
</resources>