<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/options_button"
        android:layout_width="132dp"
        android:layout_height="98dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="308dp"
        android:text="@string/options_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="132dp"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="308dp"
        android:text="@string/profile_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/options_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="132dp"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="moveToBrowseMenu"
        android:text="@string/search_button"
        app:layout_constraintBottom_toTopOf="@+id/profile_button"
        app:layout_constraintEnd_toStartOf="@+id/add_word_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <Button
        android:id="@+id/add_word_button"
        android:layout_width="132dp"
        android:layout_height="98dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        android:onClick="moveToAddMenu"
        android:text="@string/add_word_button"
        app:layout_constraintBottom_toTopOf="@+id/options_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <TextView
        android:id="@+id/placeholderTitle"
        android:layout_width="323dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:fontFamily="casual"
        android:text="@string/placeholder_title"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>